# advent-of-code

./: aoc.cabal
src/: Main.hs  Parser.hs
src/Year2023/: Day01.hs  Day02.hs  Day03.hs  Day04.hs
src/Year2024/: Day04.hs
