cabal-version: 2.4
name: advent-of-code
version: 0.1.0.0

executable aoc
    main-is: Main.hs
    hs-source-dirs: src
    other-modules:
      Year2023.Day01

    ghc-option:
      -Wall

    default-language: Haskell2010
    default-extensions:
      OverloadedStrings

    build-depends:
      base ^>=4.17.2.0,
      safe
