cabal-version: 2.4
name: advent-of-code
version: 0.1.0.0

executable aoc
    main-is: Main.hs
    hs-source-dirs: src
    other-modules:
      Parser
      Year2023.Day01
      Year2023.Day02
      Year2023.Day03
      Year2023.Day04

    ghc-option:
      -Wall
      -Wcompat
      -Werror

    default-language: Haskell2010
    default-extensions:
      DerivingStrategies,
      GeneralizedNewtypeDeriving,
      OverloadedStrings

    build-depends:
      base ^>=4.17.2.0,
      containers,
      megaparsec,
      parser-combinators,
      safe,
      text
